--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "bootstrap": "^5.1.3",
+    "enzyme": "^3.11.0",
+    "jest": "^26.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-bootstrap-icons": "^1.6.1",
@@ -22,7 +25,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -42,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.16.0"
   }
 }
